Adapt to QtGui changes that broke private API source compatibility

The public constructors in QTextCursor that were private API are no
longer public.

Task-number: QTCREATORBUG-15238
Change-Id: I3bc59670b62d4afaa645ffff1411b76029249840
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>