src/plugins/coreplugin/find/basetextfind.cpp
@@ -39,6 +39,8 @@
 #include <QPlainTextEdit>
 #include <QTextCursor>
 
+#include <private/qtextcursor_p.h>
+
 namespace Core {
 
 struct BaseTextFindPrivate
@@ -392,8 +394,13 @@ void BaseTextFind::defineFindScope()
 {
     QTextCursor cursor = textCursor();
     if (cursor.hasSelection() && cursor.block() != cursor.document()->findBlock(cursor.anchor())) {
+#if QT_VERSION >= QT_VERSION_CHECK(5,6,0)
+        d->m_findScopeStart = QTextCursorPrivate::fromPosition(document()->docHandle(), qMax(0, cursor.selectionStart()));
+        d->m_findScopeEnd = QTextCursorPrivate::fromPosition(document()->docHandle(), cursor.selectionEnd());
+#else
         d->m_findScopeStart = QTextCursor(document()->docHandle(), qMax(0, cursor.selectionStart()));
         d->m_findScopeEnd = QTextCursor(document()->docHandle(), cursor.selectionEnd());
+#endif
         d->m_findScopeVerticalBlockSelectionFirstColumn = -1;
         d->m_findScopeVerticalBlockSelectionLastColumn = -1;
 
